--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
         <link rel="stylesheet" href="assets/style.css">
     </head>
     <body>
+        <div class="disclaimer">
+            <p>untuk perhitungan persen menngunakan perhitungan nilai persen dari nilai yang akan dihitung. contoh : </p>
+            <code>hasil = 7 % 8</code>
+        </div>
         <div class="calculator">
             <input type="text" class="calculator-screen">
             <div class="calculator-keys">
                 <div class="row">
                     <button class="all-clear">AC</button>
-                    <button class="percentage">%</button>
+                    <button class="operator" value="%">%</button>
                     <button class="operator" value="/">&divide;</button>
                 </div>
                 <div class="row">
