--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     </head>
     <body>
         <div class="disclaimer">
-            <p>untuk perhitungan persen menngunakan perhitungan nilai persen dari nilai yang akan dihitung. contoh : </p>
-            <code>hasil = 7 % 8</code>
+            <p>untuk persen, pilih angka lalu tekan "persen" dan tekan "sama dengan"</p>
         </div>
         <div class="calculator">
             <input type="text" class="calculator-screen">
